--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,24 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Backend lint: black check
+        working-directory: backend
+        run: |
+          python -m pip install black
+          black --check .
+
+      - name: Backend lint: flake8
+        working-directory: backend
+        run: |
+          python -m pip install flake8
+          flake8 . --max-line-length=120 || true
+
+      - name: Backend typecheck: mypy
+        working-directory: backend
+        run: |
+          python -m pip install mypy
+          mypy . || true
+
       - name: Run backend tests
         working-directory: backend
         env:
