modified:   .github/workflows/main.yml 	new file:   .pre-commit-config.yaml 	modified:   backend/app/api/courses.py 	modified:   backend/app/api/messages.py 	modified:   backend/app/api/payments.py 	modified:   frontend/app/courses/stepik/[id]/page.client.tsx 	new file:   frontend/components/__tests__/ReviewForm.test.tsx 	new file:   frontend/components/__tests__/ReviewList.test.tsx 	new file:   mypy.ini 	new file:   pyproject.toml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,13 +45,13 @@ jobs:
         working-directory: backend
         run: |
           python -m pip install flake8
-          flake8 . --max-line-length=120 || true
+          flake8 . --max-line-length=120
 
       - name: Backend typecheck: mypy
         working-directory: backend
         run: |
           python -m pip install mypy
-          mypy . || true
+          mypy .
 
       - name: Run backend tests
         working-directory: backend
