--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,45 +18,47 @@
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^5.28.0",
+    "axios": "^1.6.2",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.292.0",
+    "next": "^14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "^14.0.4",
-    "typescript": "^5.3.3",
-    "@reduxjs/toolkit": "^1.9.7",
-    "react-redux": "^8.1.3",
-    "axios": "^1.6.2",
-    "react-query": "^3.39.3",
-    "@tanstack/react-query": "^5.28.0",
-    "lucide-react": "^0.292.0",
-    "zustand": "^4.4.5",
-    "jwt-decode": "^4.0.0",
-    "date-fns": "^2.30.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.2.1",
-    "react-hot-toast": "^2.4.1",
-    "zod": "^3.22.4",
     "react-hook-form": "^7.48.0",
+    "react-hot-toast": "^2.4.1",
+    "react-query": "^3.39.3",
+    "react-redux": "^8.1.3",
     "swr": "^2.2.4",
-    "next-auth": "^4.24.5"
+    "tailwind-merge": "^2.2.1",
+    "typescript": "^5.3.3",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.5"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.32",
     "autoprefixer": "^10.4.16",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.13",
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.1.1",
     "jest": "^29.7.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "ts-node": "^10.9.2",
-    "@types/jest": "^29.5.11"
+    "jest-environment-jsdom": "^30.2.0",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.4.5",
+    "ts-node": "^10.9.2"
   },
   "engines": {
     "node": ">=16.0.0",
