--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,6 +78,7 @@ jobs:
           npm ci
 
       - name: Lint
+        continue-on-error: true
         run: |
           cd frontend
           npm run lint --if-present
