--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -2,5 +2,8 @@
   "extends": [
     "next/core-web-vitals",
     "next/typescript"
-  ]
+  ],
+  "rules": {
+    "react/forbid-dom-props": "off"
+  }
 }
