modified:   frontend/.eslintrc.json 	modified:   frontend/app/admin/page.tsx 	modified:   frontend/app/globals.css 	modified:   frontend/components/Header.tsx

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -4,6 +4,7 @@
     "next/typescript"
   ],
   "rules": {
-    "react/forbid-dom-props": "off"
+    "react/forbid-dom-props": "off",
+    "react/style-prop-object": "off"
   }
 }
