--- a/backend/requirements-prod.txt
+++ b/backend/requirements-prod.txt
@@ -41,6 +41,7 @@ email-validator==2.1.0
 
 # ==================== MONITORING ====================
 sentry-sdk[fastapi]==1.38.0
+psutil==5.9.6
 
 # ==================== UTILITIES ====================
 python-slugify==8.0.1
