modified:   amvera.yml 	modified:   backend/Dockerfile 	new file:   backend/docker-entrypoint.sh

--- a/amvera.yml
+++ b/amvera.yml
@@ -6,7 +6,8 @@ meta:
   project: mentorhub
 
 build:
-  dockerfile: ./Dockerfile
+  dockerfile: ./backend/Dockerfile
+  context: ./backend
 
 run:
   containerPort: 8000
