--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,59 @@
-# backend/Dockerfile
-FROM python:3.11-slim
+# ==================== BUILD STAGE ====================
+FROM python:3.11-slim as builder
+
+# Set working directory
 WORKDIR /app
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+
+# Install build dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
+
+# Copy and install Python dependencies
+COPY requirements-prod.txt .
+RUN pip install --user --no-cache-dir -r requirements-prod.txt
+
+# ==================== PRODUCTION STAGE ====================
+FROM python:3.11-slim as production
+
+# Set working directory
+WORKDIR /app
+
+# Install runtime dependencies only
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libpq5 \
+    curl \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
+
+# Copy installed packages from builder
+COPY --from=builder /root/.local /root/.local
+
+# Add .local/bin to PATH
+ENV PATH=/root/.local/bin:$PATH
+
+# Create non-root user (optional, commented for Amvera compatibility)
+# RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
+# USER appuser
+
+# Copy application code
 COPY . .
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+# Make entrypoint executable
+RUN chmod +x docker-entrypoint.sh
+
+# Environment variables
+ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
+# Expose port
+EXPOSE 8000
+
+# Run application via entrypoint
+ENTRYPOINT ["./docker-entrypoint.sh"]
