--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,52 +1,34 @@
-# ==================== BUILD STAGE ====================
-FROM python:3.11-slim as builder
+# Use Python 3.11 slim image
+FROM python:3.11-slim
 
 # Set working directory
 WORKDIR /app
 
-# Install build dependencies
+# Environment variables
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PATH=/root/.local/bin:$PATH
+
+# Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
     libpq-dev \
-    && rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
-
-# Copy and install Python dependencies
-COPY requirements-prod.txt .
-RUN pip install --user --no-cache-dir -r requirements-prod.txt
-
-# ==================== PRODUCTION STAGE ====================
-FROM python:3.11-slim as production
-
-# Set working directory
-WORKDIR /app
-
-# Install runtime dependencies only
-RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq5 \
     curl \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 
-# Copy installed packages from builder
-COPY --from=builder /root/.local /root/.local
+# Copy requirements first for better caching
+COPY requirements.txt .
 
-# Add .local/bin to PATH
-ENV PATH=/root/.local/bin:$PATH
-
-# Create non-root user (optional, commented for Amvera compatibility)
-# RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
-# USER appuser
+# Install Python dependencies
+RUN pip install --user --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY . .
 
 # Make entrypoint executable
 RUN chmod +x docker-entrypoint.sh
-
-# Environment variables
-ENV PYTHONUNBUFFERED=1
-ENV PYTHONDONTWRITEBYTECODE=1
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
