--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -51,6 +51,7 @@ stripe==7.4.0
 # ==================== MONITORING & LOGGING ====================
 python-json-logger==2.0.7
 sentry-sdk==1.38.0
+psutil==5.9.6
 
 # ==================== DEVELOPMENT ====================
 pytest==7.4.3
