--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -52,6 +52,7 @@ stripe==7.4.0
 python-json-logger==2.0.7
 sentry-sdk==1.38.0
 psutil==5.9.6
+prometheus-client==0.19.0
 
 # ==================== DEVELOPMENT ====================
 pytest==7.4.3
