modified:   Dockerfile 	modified:   Dockerfile.production 	modified:   backend/Dockerfile 	modified:   backend/docker-entrypoint.sh 	modified:   docker-compose.prod.yml 	modified:   docker-compose.yml 	modified:   frontend/Dockerfile 	modified:   frontend/app/auth/login/page.tsx 	modified:   frontend/app/courses/stepik/[id]/loading.tsx 	modified:   frontend/app/dashboard/page.tsx 	modified:   frontend/app/error.tsx 	modified:   frontend/app/global-error.tsx 	modified:   frontend/app/layout.tsx 	modified:   frontend/app/not-found.tsx 	modified:   frontend/components/ErrorBoundary.tsx 	new file:   frontend/components/GlobalLoadingProvider.tsx 	modified:   frontend/components/LoadingSpinner.tsx

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,18 @@
 # Use Python 3.11 slim image
 FROM python:3.11-slim
 
+# Create non-root user for security
+RUN groupadd -r appgroup && useradd -r -g appgroup appuser
+
 # Set working directory
 WORKDIR /app
 
 # Environment variables
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
-    PATH=/root/.local/bin:$PATH
+    PATH=/home/appuser/.local/bin:$PATH
 
-# Install system dependencies
+# Install system dependencies with cleanup
 RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
     libpq-dev \
@@ -21,17 +24,23 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Copy requirements first for better caching
 COPY requirements.txt .
 
-# Install Python dependencies
-RUN pip install --user --no-cache-dir -r requirements.txt
+# Install Python dependencies with no cache and disable version check
+RUN pip install --user --no-cache-dir --disable-pip-version-check -r requirements.txt
 
-# Copy application code
-COPY . .
+# Copy application code with proper ownership
+COPY --chown=appuser:appgroup . .
+
+# Change ownership to non-root user
+RUN chown -R appuser:appgroup /app
+
+# Switch to non-root user
+USER appuser
 
 # Make entrypoint executable
 RUN chmod +x docker-entrypoint.sh
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+# Health check with reduced timeout
+HEALTHCHECK --interval=30s --timeout=5s --start-period=40s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
 # Expose port
