--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -10,11 +10,12 @@ WORKDIR /app/frontend
 
 # Копируем package.json и устанавливаем зависимости
 COPY frontend/package*.json ./
-RUN npm ci --only=production
+RUN npm ci --only=production --prefer-offline --no-audit --no-fund
 
 # Копируем исходники и собираем
 COPY frontend/ ./
-RUN npm run build
+# Отключаем телеметрию Next.js для более быстрой сборки
+RUN NEXT_TELEMETRY_DISABLED=1 npm run build
 
 # ============ STAGE 2: Backend Build ============
 FROM python:3.11-slim AS backend-builder
@@ -31,7 +32,7 @@ RUN apt-get update && apt-get install -y \
 # Копируем requirements и устанавливаем Python зависимости
 COPY backend/requirements.txt ./
 RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+    pip install --no-cache-dir --disable-pip-version-check -r requirements.txt
 
 # Копируем backend код
 COPY backend/ ./
@@ -47,42 +48,45 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
+# Создаем non-root пользователя для безопасности
+RUN groupadd -r appgroup && useradd -r -g appgroup appuser
+
 # Копируем Python зависимости из builder
 COPY --from=backend-builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
 COPY --from=backend-builder /usr/local/bin /usr/local/bin
 
 # Копируем backend приложение
-COPY --from=backend-builder /app/backend /app/backend
+COPY --from=backend-builder --chown=appuser:appgroup /app/backend /app/backend
 
 # Копируем собранный frontend
-COPY --from=frontend-builder /app/frontend/.next /app/frontend/.next
-COPY --from=frontend-builder /app/frontend/public /app/frontend/public
-COPY --from=frontend-builder /app/frontend/node_modules /app/frontend/node_modules
-COPY --from=frontend-builder /app/frontend/package.json /app/frontend/package.json
+COPY --from=frontend-builder --chown=appuser:appgroup /app/frontend/.next /app/frontend/.next
+COPY --from=frontend-builder --chown=appuser:appgroup /app/frontend/public /app/frontend/public
+COPY --from=frontend-builder --chown=appuser:appgroup /app/frontend/node_modules /app/frontend/node_modules
+COPY --from=frontend-builder --chown=appuser:appgroup /app/frontend/package.json /app/frontend/package.json
 
-# Создаем non-root пользователя
-RUN useradd -m -u 1000 appuser && \
-    chown -R appuser:appuser /app
+# Устанавливаем права доступа
+RUN chown -R appuser:appgroup /app
 
 USER appuser
 
 # Переменные окружения
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
-    PORT=8000
+    PORT=8000 \
+    PATH=/home/appuser/.local/bin:$PATH
 
 WORKDIR /app/backend
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+# Health check с уменьшенным таймаутом
+HEALTHCHECK --interval=30s --timeout=5s --start-period=40s --retries=3 \
     CMD curl -f http://localhost:8000/api/v1/health || exit 1
 
 # Expose порт
 EXPOSE 8000
 
 # Скрипт запуска
-COPY docker-entrypoint.sh /app/
+COPY --chown=appuser:appgroup docker-entrypoint.sh /app/
 RUN chmod +x /app/docker-entrypoint.sh
 
 ENTRYPOINT ["/app/docker-entrypoint.sh"]
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4"]
